testSF/force-app/main/default/objects/Lending__c/fields/User_c__c.field-meta.xml
<CustomField>
    <fullName>User_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lendings1</relationshipName>
    <type>Lookup</type>
</CustomField>