testSF/force-app/main/default/objects/Lending__c/validationRules/Start_date_before_End_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_date_before_End_date</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISBLANK(Start_date__c) ) ,Start_date__c&gt;End_date__c)</errorConditionFormula>
    <errorDisplayField>Book__c</errorDisplayField>
    <errorMessage>A Lending End date  must ALWAYS be after its start date.</errorMessage>
</ValidationRule>